<resources>
    <string name="app_name">Films Today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="movie_image">Movie Poster</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="searchView_hint">Movies, Actors…</string>
    <string name="names">Names</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="want">Want</string>
    <string name="watched">Watched</string>
    <string name="genres">Genres</string>
    <string name="people">People</string>
    <string name="my_movies">My Movies</string>
    <string name="connection_lost">Connection lost</string>
    <string name="language">Language</string>
    <string name="adult_content">Adult content</string>
    <string name="about">About</string>
    <string name="choose_language">Choose language</string>
    <string name="save_settings">Save Settings</string>
    <string name="change_name">Change name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="persons">Persons</string>
    <string name="title_activity_maps">Map</string>

    <string name="want_title">Sort Want Movies By</string>
    <string name="watched_title">Sort Watched Movies By</string>
    <string name="actors_title">Sort Actors By</string>
    <string name="default_user_name">No username</string>
    <string name="poster">poster</string>
    <string name="actor">actor</string>
    <string name="like">like</string>
    <string name="play">play</string>
    <string name="filter">filter</string>
    <string name="revert">revert</string>
    <string name="change_list_style">change_list_style</string>
    <string name="profile_photo">profile_photo</string>
    <string name="star">star</string>
    <string name="background">background</string>
    <string name="connection_established">Connection established</string>

    <string-array name="movie_filter_options">
        <item>A - B</item>
        <item>Date Added</item>
        <item>Release Date</item>
        <item>TMDB Rating</item>
    </string-array>

    <string-array name="Languages">
        <item>English</item>
        <item>Russian</item>
    </string-array>
</resources>