<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isAdultContentAvailable"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottomSheetBackground">

        <androidx.cardview.widget.CardView
            android:id="@+id/userImageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/rivUserImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile" />

        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sfprodisplay_regular"
            android:textColor="@color/white"
            android:textColorHighlight="@color/grayText"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImageContainer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangeUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sfprodisplay_regular"
            android:text="@string/change_name"
            android:textAllCaps="false"
            android:textColor="@color/grayText"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/tvUserName"
            app:layout_constraintStart_toStartOf="@+id/tvUserName"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/sfprodisplay_regular"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangeUserName" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/bottomSheetBackground"
            android:fontFamily="@font/sfprodisplay_regular"
            android:gravity="center"
            android:hint="@string/choose_language"
            android:padding="10dp"
            android:textColor="@color/textOnButton"
            android:textColorHint="@color/textOnButton"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="@dimen/_10sdp"
            app:spinner_arrow_tint="@color/textOnButton"
            app:spinner_item_array="@array/Languages"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/bottomSheetBackground"
            app:spinner_popup_elevation="14dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/sfprodisplay_regular"
            android:text="@string/adult_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAdultContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{isAdultContentAvailable ? true : false, default=true}"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:text="@string/about"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_arrow_right"
            app:iconGravity="end"
            app:layout_constraintTop_toBottomOf="@+id/switchAdultContent"
            tools:layout_editor_absoluteX="19dp" />

        <TextView
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/karla_bold"
            android:padding="@dimen/_5sdp"
            android:text="@string/save_settings"
            android:textColor="@color/red"
            android:textSize="@dimen/_17ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>