<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="foundMovies"
            type="Boolean" />

        <variable
            name="foundActors"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <TextView
                    android:id="@+id/pageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfprodisplay_medium"
                    android:letterSpacing="0.05"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_30ssp"
                    app:layout_collapseMode="parallax"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/searchView_hint"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/grayText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@color/inactive">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/elementsColor"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/color_cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_regular"
                android:padding="@dimen/_10sdp"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:visibility="@{foundMovies ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <com.factor.bouncy.BouncyRecyclerView
                android:id="@+id/rvMoviesSearchResult"
                android:layout_width="0dp"
                android:layout_height="@dimen/_150sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/sfprodisplay_regular"
                android:padding="@dimen/_10sdp"
                android:text="@string/names"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:visibility="@{foundActors ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvMoviesSearchResult" />

            <com.factor.bouncy.BouncyRecyclerView
                android:id="@+id/rvActorsSearchResults"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>