<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isActorListOpen"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        tools:context=".fragments.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_medium"
                android:letterSpacing="0.05"
                android:padding="@dimen/_10sdp"
                android:text="@string/my_movies"
                android:textColor="@color/white"
                android:textSize="@dimen/_30ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/btnProfileImage"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_25sdp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:riv_corner_radius="@dimen/_30sdp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:tabGravity="center"
                app:tabIndicatorColor="@color/red"
                app:tabIndicatorFullWidth="false"
                app:tabMode="scrollable"
                app:tabPaddingEnd="30dp"
                app:tabPaddingStart="30dp"
                app:tabRippleColor="@color/ripple"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/ProfileTabLayoutTextAppearance"
                app:tabTextColor="@color/inactive">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/want" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watched" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/people" />

            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:id="@+id/tvMoviesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

            <TextView
                android:id="@+id/tvDataType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@{isActorListOpen ? @string/persons : @string/movies, default=@string/movies}"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tvMoviesCount"
                app:layout_constraintStart_toEndOf="@id/tvMoviesCount"
                app:layout_constraintTop_toTopOf="@+id/tvMoviesCount" />

            <ImageView
                android:id="@+id/btnChangeRecyclerViewLayout"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/ic_list"
                android:visibility="@{isActorListOpen ? View.GONE : View.VISIBLE, default=visible}"
                app:layout_constraintBottom_toBottomOf="@+id/btnFilter"
                app:layout_constraintEnd_toStartOf="@+id/btnRevertList"
                app:layout_constraintTop_toTopOf="@+id/btnFilter" />

            <ImageView
                android:id="@+id/btnRevertList"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintBottom_toBottomOf="@+id/btnFilter"
                app:layout_constraintEnd_toStartOf="@+id/btnFilter"
                app:layout_constraintTop_toTopOf="@+id/btnFilter" />

            <ImageView
                android:id="@+id/btnFilter"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_filter"
                android:visibility="@{isActorListOpen ? View.GONE : View.VISIBLE, default=visible}"
                app:layout_constraintBottom_toBottomOf="@+id/tvDataType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDataType" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moviesList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRevertList" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/filterBottomSheet"
            layout="@layout/filter_dialog" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>